# zivid_description

./: CMakeLists.txt  README.md  package.xml
launch/: view_zivid.launch.py
meshes/collision/: zivid-onarm-hull.stl  zivid-one-plus-hull.stl  zivid-two-hull.stl
meshes/visual/: zivid-onarm.stl  zivid-one-plus.stl  zivid-two.stl
urdf/: zivid_select.urdf.xacro  zivid_two_l_camera.urdf.xacro  zivid_two_m_camera.urdf.xacro
urdf/macros/: zivid_onarm.xacro  zivid_one_plus_camera.xacro  zivid_two_camera.xacro
