<?xml version="1.0"?>
<package format="3">
  <name>zivid_description</name>
  <version>0.1.0</version>
  <description>Description of visual and collision geometry of Zivid One+ 3D Camera</description>
  
  <maintainer email="support@zivid.com">Zivid</maintainer>
  <author email="d.kroezen@tudelft.nl">Dave Kroezen - SAM|XL</author>

  <license>BSD3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>